[project]
name = "climber-network"
version = "0.1.0"
description = "Neo4j knowledge graph for the climbing athlete network"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5",
    "sqlalchemy>=2",
    "psycopg[binary]>=3",
    "timezonefinder>=6",
    "certifi",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "groq>=0.11",
    "pyyaml>=6",
    "typer>=0.12",
    "rich>=13",
    "python-dotenv>=1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "bandit",
    "pip-audit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/climber_network"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
# Use ruff default formatting settings

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/climber_network/graph/client.py",  # IO-heavy Neo4j driver; tested via integration
]
